2009-11-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView_actions.m (-validateMenuItem:,
	-validateUserIntefaceItem:): Implement menu and user interface
	item validation for NSTextView. The list of validated actions is
	incomplete but at least includes all items from a standard Edit
	menu.

	* Source/NSCell.m(-_setupTextWithFrame:inView:editor:delegate:range:,
	-_updateFieldEditor):
	* Source/NSActionCell.m (-setObjectValue:, -setStringValue:):
	Fix NSActionCell implementation so that -setObjectValue: and
	-setStringValue: have an effect while the cell is edited.

2009-11-14 Hans Baier <hansfbaier@googlemail.com>

	* Source/GSThemeDrawing.m: fix bug introduced in last commit
	(progress bar fills the whole area)

2009-11-14 Hans Baier <hansfbaier@googlemail.com>

	* Headers/Additions/GNUstepGUI/GSTheme.h,
	* Source/GSThemeDrawing.m: Factor out drawing of progress
	indicator's bezel and bar

2009-11-14 Hans Baier <hansfbaier@googlemail.com>

	* Headers/Additions/GNUstepGUI/GSTheme.h,
	* Source/GSThemeDrawing.m,
	* Source/NSMenuItemCell.m: Make the menu arrow image themeable

2009-11-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImage.m (-copyWithZone:): Set the name of the copy to
	nil, not that of the original image.

2009-11-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSImage.m: fixup copy/dealloc handling of named images

2009-11-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m: Implement isZommed. Move the call to
	windowWillResize:toSize: from setFrame:display into setFrameFromString:.

2009-11-09 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSTheme.h,
	* Source/GSThemeDrawing.m,
	* Source/NSProgressIndicator.m: Move initialiation and drawing
	into GSTheme.

2009-11-09 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSTheme.h,
	* Source/GSThemeDrawing.m,
	* Source/NSColorWell.m: Move colour well border drawing into GSTheme.
	This change makes the dragable area of the well a bit smaller.	
